<resources>
    <string name="app_name">Invest.io</string>

    <string name="title_portfolio">Portfolio</string>
    <string name="title_browse">Browse</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_profile">Profile</string>
    <string name="label_name">Name</string>
    <string name="label_username">Username</string>
    <string name="label_username_or_email">Username or email</string>
    <string name="label_email">E-mail</string>
    <string name="label_investing">Investing</string>
    <string name="label_dob">Birthday</string>
    <string name="label_password">Password</string>
    <string name="title_register">Register</string>
    <string name="action_register">Register</string>
    <string name="title_login">Login</string>
    <string name="action_login">Login</string>
    <string name="action_log_out">Log out</string>
    <string name="hint_search">Search</string>
    <string name="value_currency">$%1$.2f</string>
    <string name="week_history_label">2w</string>
    <string name="month_history_label">3m</string>
    <string name="year_history_label">1y</string>
    <string name="label_assets">Assets</string>
    <string name="action_refresh">Refresh</string>
    <string name="label_movers">Movers</string>
    <string name="asset_fab_desc">Trade the current asset</string>
</resources>